data/all_generated_tests/raw_wast_tests/br_IncorrectConditionEvaluation_739.wast
;; 10. **Test Description:**     - Implement a `br_if` with a condition that utilizes a counter variable reset within a loop cycle. Test if breakpoint correctly updates based on real-time counter changes.     - **Constraint Checked:** Accurate end-of-cycle counter evaluation ensuring proper branch decisions.     - **Test Relation:** Ensures condition tied to cyclic counter variables triggers correct `br_if` branches.

(assert_invalid
  (module
    (func $incorrect-cycle-br_if
      (local $counter i32)
      (loop
        (local.set $counter (i32.const 10))
        (br_if 1 (i32.lt_s (local.get $counter) (i32.const 5)))
      )
    )
  )
  "unknown label"
)